@@ -1,3 +1,4 @@
+- STREL-238 add multi-sample ploidy specification using vcf
 - STREL-217 integrate short haplotying with multi-sample support
 - STREL-158 support multi-sample in standard germline analysis
 - STREL-218 Tune indel parameters for improved het/hom ratio
